before fixing sorting section overflow

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ a {
 
 .white-button {
   display: inline-block;
-  height: 38px;
+  min-height: 38px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 
@@ -504,13 +504,14 @@ background-color: #ca2c37;
 
 .registration-link {
   padding: 14px 25px 10px 25px;
+  margin-left: 10px;
 
 }
 
  .login-link {
   position: relative;
 
-  margin-right: 10px;
+  margin-left: 10px;
   padding: 14px 25px 10px 48px;
 }
 
@@ -610,16 +611,21 @@ background-color: #293449;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 50px;
+  margin-left: 40px;
   padding-left: 20px;
   padding-top: 8px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
 
+.account-navigation-list-item.first {
+  padding-left: 10px;
+}
+
 .account-navigation-list-item.second a {
   position: relative;
   padding-left: 30px;
+  padding-right: 30px;
 }
 
 .account-navigation-list-item.second a:before {
@@ -738,7 +744,7 @@ background-color: #293449;
   vertical-align: middle;
 
   width: 135px;
-  height: 38px;
+  min-height: 38px;
   margin-top: 14px;
 
   font-family: "Cuprum", Arial, sans-serif;
@@ -1163,16 +1169,16 @@ background-color: rgba(0, 0, 0, 0.2);
   margin: 0;
 }
 
-.delivery .par-small {
+.par-small {
   max-width: 400px;
   margin-top: 25px;
 }
 
-.service-menu-tabs > input {
+.service-menu-container > input {
   display: none;
 }
 
-.service-menu > label {
+.service-menu-container > label {
   display: block;
   width: 240px;
   height: 62px;
@@ -1190,29 +1196,28 @@ background-color: rgba(0, 0, 0, 0.2);
   color: #fff;
 }
 
-.service-menu-tabs > label:hover,
-.service-menu-tabs > label:focus {
+.service-menu-container > label:hover,
+.service-menu-container > label:focus {
   color: #fff;
   background-color: #293449;
 }
 
-.service-menu-tabs input:checked + label {
+.service-menu-container input:checked + label {
   color: #32425c;
   background-color: #fff;
   -webkit-box-shadow: inset 0 1px 0 0 #fff;
           box-shadow: inset 0 1px 0 0 #fff;
 }
 
-.service-menu {
-  display: flex;
+.service-menu-container {
 
   position: relative;
   margin-top: 70px;
 }
 
 .tab {
-  /* position: absolute; */
-  width: 100%;
+  position: absolute;
+  width: 66%;
   top: 0;
   left: 320px;
   min-height: 285px;
@@ -1245,7 +1250,7 @@ background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
 }
 
-.service-menu-tabs label:nth-of-type(1)::before {
+.service-menu-container label:nth-of-type(1)::before {
   content: "";
   width: 10px;
   height: 280px;
@@ -1315,7 +1320,7 @@ background-color: rgba(0, 0, 0, 0.2);
 }
 
 .delivery p {
-  margin-top: 27px;
+  margin-top: 25px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
   line-height: 24px;
@@ -1447,7 +1452,7 @@ width: 200px;
 }
 
 .site-navigation-item-list {
-  margin-top: 40px;
+  margin-top: 38px;
   margin-bottom: 0;
 }
 
@@ -1467,6 +1472,7 @@ width: 200px;
 
 .footer-navigation address {
   width: 325px;
+  margin-left: 5px;
   line-height: 1.33;
 
 }
@@ -1495,7 +1501,7 @@ width: 200px;
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding-top: 35px;
-  padding-bottom: 55px;
+  padding-bottom: 45px;
 }
 
 .shop-navigation a {
@@ -1539,6 +1545,7 @@ width: 200px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
 }
@@ -1607,6 +1614,7 @@ width: 200px;
 }
 
 .footer-bottom .social {
+  width: 130px;
   margin-right: 120px;
   margin-left: auto;
 }
